...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/login"
        android:textSize="16sp"
...
        app:cornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_tagline" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/sign_up"
        android:textSize="16sp"
...
